test/files/neg/t9572.check
t9572.scala:3: error: too many elements for tuple: 23, allowed: 22
  val term23 = (1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23)
               ^
t9572.scala:5: error: too many elements for tuple: 23, allowed: 22
  val type23: (Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int,Int) = null
              ^
two errors found
